; ModuleID = '/home/carl/AnghaBench/mpv/audio/extr_aframe.c_mp_aframe_duration.c'
source_filename = "/home/carl/AnghaBench/mpv/audio/extr_aframe.c_mp_aframe_duration.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mp_aframe = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { double }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local double @mp_aframe_duration(%struct.mp_aframe* %0) #0 {
  %2 = alloca double, align 8
  %3 = alloca %struct.mp_aframe*, align 8
  %4 = alloca double, align 8
  store %struct.mp_aframe* %0, %struct.mp_aframe** %3, align 8
  %5 = load %struct.mp_aframe*, %struct.mp_aframe** %3, align 8
  %6 = call double @mp_aframe_get_effective_rate(%struct.mp_aframe* %5)
  store double %6, double* %4, align 8
  %7 = load double, double* %4, align 8
  %8 = fcmp ole double %7, 0.000000e+00
  br i1 %8, label %9, label %10

9:                                                ; preds = %1
  store double 0.000000e+00, double* %2, align 8
  br label %18

10:                                               ; preds = %1
  %11 = load %struct.mp_aframe*, %struct.mp_aframe** %3, align 8
  %12 = getelementptr inbounds %struct.mp_aframe, %struct.mp_aframe* %11, i32 0, i32 0
  %13 = load %struct.TYPE_2__*, %struct.TYPE_2__** %12, align 8
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i32 0, i32 0
  %15 = load double, double* %14, align 8
  %16 = load double, double* %4, align 8
  %17 = fdiv double %15, %16
  store double %17, double* %2, align 8
  br label %18

18:                                               ; preds = %10, %9
  %19 = load double, double* %2, align 8
  ret double %19
}

declare dso_local double @mp_aframe_get_effective_rate(%struct.mp_aframe*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
